--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,16 @@
 html {
     position: relative;
-}
-html, body {
-    min-height: 100%;
-    padding-bottom: 100px;
+    height: 100%;
 }
 
 body {
+    min-height: 100%;
     padding-top: 70px;
+    position: relative;
+}
+
+#content {
+    min-height: 400px;
 }
 
 .pwstrength + .progress {
@@ -19,39 +22,35 @@ body {
     padding-bottom: 10px;
 }
 
-/* == Footer */
-
-footer {
-    position: absolute;
-    bottom: 0;
+.navbar-sticky-bottom {
+    position: fixed;
     width: 100%;
-    padding: 20px 0 10px 0;
-    background: #333;
-    color: #fff;
+    padding-bottom: 100vh;
+    border-width: 1px 0 0;
+    border-radius: 0;
+    margin: 0;
 }
 
-footer a {
-    color: #fff;
+@media (min-width: 768px) {
+    body {
+        padding-bottom: 70px;
+    }
+    .navbar-sticky-bottom {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        padding-bottom: 0;
+    }
 }
-footer p {
-    margin: 0;
-    padding: 7px 10px;
-}
-footer .nav-pills > li > a {
-    border-radius: 0;
-    padding: 7px 10px;
-}
-footer .nav-pills > li.attribution a {
-    padding: 0;
-    margin: 5px 15px;
-}
-footer .nav-pills > li > a:hover,
-footer .nav-pills > li > a:focus,
-footer .nav-pills > li.active > a,
-footer .nav-pills > li.active > a:hover,
-footer .nav-pills > li.active > a:focus {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: #fff;
+
+@media (min-width: 768px) {
+    .navbar-nav.navbar-left:first-child {
+        margin-left: -15px;
+    }
+    .navbar-nav.navbar-right:last-child {
+        margin-right: -15px;
+    }
 }
 
 /* == Sign in == */
