--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>{% if title %}title &middot {% endif %}{{ app.name }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--[if gte IE 9]> -->
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.0.1-p7/css/bootstrap.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.css">
         <!-- <![endif]-->
 
         <!-- HTML5 shim en Respond.js zijn nodig voor IE8. Respond.js werkt niet cross-domain. -->
@@ -23,17 +24,17 @@
     </head>
     <body>
         {% block navbar %}
-            <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
+            <header class="navbar navbar-default navbar-fixed-top" role="banner">
                 <div class="container container-smooth">
                     <div class="navbar-header">
-                        <button class="navbar-toggle" type="button" data-toggle="offcanvas" data-target=".navbar-offcanvas" data-canvas="body" data-placement="left">
+                        <button class="navbar-toggle" type="button" data-toggle="offcanvas" data-target=".navbar-offcanvas" data-canvas="body">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                         </button>
-                        <a href="/" class="navbar-brand">{{ constant('DOMAIN') }}</a>
+                        <a href="/" class="navbar-brand">{{ app.name }}</a>
                     </div>
 
-                    <nav class="navbar-offcanvas offcanvas-xs" role="navigation">
+                    <nav class="navbar-offcanvas offcanvas" role="navigation">
                         <ul class="nav navbar-nav navbar-right">
                             {% if auth.user %}
                                 <li class="profile dropdown">
@@ -48,8 +49,8 @@
                                     </ul>
                                 </li>
                             {% else %}
-                                <li><a href="#signup" title="Sign up for a new account" data-toggle="modal"><strong>Sign up</strong></a></li>
-                                <li><a href="#login" title="Log in" data-toggle="modal"><strong>Log in</strong></a></li>
+                                <li><a href="#signup" title="Sign up for a new account" data-toggle="modal">Sign up</a></li>
+                                <li><a href="#login" title="Log in" data-toggle="modal">Log in</a></li>
                             {% endif %}
                         </ul>
 
@@ -61,8 +62,7 @@
             </header>
         {% endblock %}
         
-        {% set flash = useFlash() %}
-        {% if flash %}
+        {% if flash.issued %}
             <div class="alert alert-{{ flash.type == 'error' ? 'danger' : flash.type }} alert-fixed-top">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                 {{ flash.message|raw }}
@@ -79,13 +79,13 @@
         {% endblock %}
 
         {% block footer %}
-            <footer>
+            <footer class="navbar navbar-inverse navbar-sticky-bottom">
                 <div class="container container-smooth">
-                    <ul class="nav nav-pills pull-left">
+                    <ul class="nav navbar-nav navbar-left">
                         {% include '_includes/nav-footer.html.twig' %}
                     </ul>
-                    <p class="pull-right">
-                        &copy; {{ now|date('Y') }} {{ constant('DOMAIN') }}
+                    <p class="navbar-text navbar-right">
+                        &copy; {{ now|date('Y') }} {{ app.name }}
                     </p>
                 </div>
             </footer>
@@ -95,7 +95,8 @@
         {% block modals %}{% endblock %}
 
         <script src="//code.jquery.com/jquery.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.0.1-p7/js/bootstrap.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
         <script src="/js/lib/pwstrength.js"></script>
         <script src="/js/main.js"></script>
         {% block javascripts %}{% endblock %}
