Base signup-auth functional

--- a/views/email/base.html.twig
+++ b/views/email/base.html.twig
@@ -22,7 +22,7 @@
                     <tr>
                         <td align="center" valign="top" style="color: #707070; font-family: Arial; font-size: 12px; line-height: 150%; text-align: left; padding-top: 10px">
                             <center>
-                                <a href="http://www.{{ constant('DOMAIN') }}/">{{ constant('DOMAIN') }}</a>
+                                <a href="{{ base_url }}">{{ base_url }}</a>
                             </center>
                         </td>
                     </tr>
