--- a/views/email/reset-password.html.twig
+++ b/views/email/reset-password.html.twig
@@ -1,8 +1,10 @@
-{% extends "email/base.twig.html" %}
+{% extends "@email/base.html.twig" %}
 {% do email.setSubject("Reset password") %}
 
-<h1>Reset Password</h1>
+{% block content %}
+    <h1>Reset Password</h1>
 
-<p>Hi {{ person.first_name }} {{ person.last_name }},</p>
+    <p>Hi {{ user }},</p>
 
-<p><a href="http://www.{{ constant('DOMAIN') }}/reset-password/{{ person.passwordResetHash }}" target="_blank">Set new password</a></p>
+    <p><a href="{{ url }}" target="_blank" class="reset-link">Set new password</a></p>
+{% endblock %}
