--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,6 +117,7 @@ body {
     .social-buttons {
         margin-bottom: 40px;
     }
+
     .social-buttons a {
         margin-bottom: 5px;
     }
@@ -172,4 +173,59 @@ hgroup.error-page h2 {
         color: #eee;
         z-index: -1;
     }
+}
+
+/* == User settings == */
+
+.btn-linkedin {
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 123, 182);
+    border-color: rgba(0,0,0,0.2);
+}
+
+.btn-google-plus {
+    color: rgb(255, 255, 255);
+    background-color: rgb(221, 75, 57);
+    border-color: rgba(0,0,0,0.2);
+}
+
+.btn-facebook {
+    color: rgb(255, 255, 255);
+    background-color: rgb(59, 89, 152);
+    border-color: rgba(0,0,0,0.2);
+}
+
+.btn-twitter {
+    color: rgb(255, 255, 255);
+    background-color: rgb(43, 169, 225);
+    border-color: rgba(0,0,0,0.2);
+}
+
+.btn-google-plus:hover, 
+.btn-google-plus:focus, 
+.btn-google-plus:active, 
+.btn-google-plus.active {
+    color: rgb(255, 255, 255);
+    background-color: rgb(202, 53, 35);
+    border-color: rgba(0,0,0,0.2);
+}
+
+.avatar-block .thumbnail {
+    border: none;
+}
+
+.avatar-block .thumbnail img {
+    width: 200px;
+    height: 200px;
+}
+
+.user-settings .change-password {
+    margin-top: 7px;
+    display: inline-block;
+}
+
+/* == Reset password == */
+
+.user-header h1 {
+    line-height: 1.5;
 }
