--- a/views/auth/reset-password.html.twig
+++ b/views/auth/reset-password.html.twig
@@ -3,23 +3,31 @@
 {% set title = 'Reset password' %}
 
 {% block content %}
-<div class="user-header">
-    <img class="img-circle pull-left" src="{{ person.image.url('140x190-crop')|default('/img/' ~ person.gender|default('male')~'-circle-50.png') }}">
-    <h1>{{ person }}</h1>
-</div>
-
-<h2 class="modal-title">Enter a new password</h2>
-
-<form id="reset-password" action="/reset-password/{{ hash }}" class="row" method="post">
-    <div class="col-md-5">
-        <input type="hidden" name="email" value="{{ person.email }}">
-        <div class="form-group">
-            <input class="form-control input-lg pwstrength" name="password" placeholder="Password" type="password" required pattern=".{6,}" title="6 characters minimum"/>
-        </div>
-        <div class="form-group">
-            <input class="form-control input-lg" name="password-confirm" placeholder="Confirm password" type="password" required pattern=".{6,}" title="6 characters minimum"/>
-        </div>
-        <button class="btn btn-lg btn-success btn-block btn-center" type="submit">Submit</button>
+    <div class="user-header">
+        <img class="img-circle pull-left" src="{{ user.image.url('140x190-crop')|default('/img/' ~ user.gender|default('male')~'-circle-50.png') }}">
+        <h1>{{ user }}</h1>
     </div>
-</form>
+
+    <h2>Enter a new password</h2>
+
+    <form id="reset-password-form" action="/reset-password?c={{ hash }}" class="row" method="post" data-toggle="validator" data-disable="false">
+        <div class="col-md-5">
+            <input type="hidden" name="email" value="{{ user.email }}"/>
+
+            <div class="form-group">
+                <input class="form-control input-lg pwstrength" id="password" name="password" placeholder="Password" type="password" required pattern=".{6,}" title="6 characters minimum" data-required-error="Fill new password in"/>
+                <div class="help-block with-errors"></div>
+            </div>
+            <div class="form-group">
+                <input class="form-control input-lg" name="password-confirm" placeholder="Confirm password" type="password" required pattern=".{6,}" title="6 characters minimum" data-error="Please confirm password" data-match-error="Password and password confirmation should match" data-match="#password"/>
+                <div class="help-block with-errors"></div>
+            </div>
+
+            <button class="btn btn-lg btn-success btn-block btn-center" type="submit">Submit</button>
+        </div>
+    </form>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
 {% endblock %}
